tests/ui/parser/recover/recover-assoc-lifetime-constraint.stderr
error: lifetimes are not permitted in this context
  --> $DIR/recover-assoc-lifetime-constraint.rs:3:18
   |
LL |     bar::<Item = 'a>();
   |           -------^^
   |           |      |
   |           |      lifetime is not allowed here
   |           this introduces an associated item binding
   |
   = help: if you meant to specify a trait object, write `dyn /* Trait */ + 'a`
help: you might have meant to write a bound here
   |
LL -     bar::<Item = 'a>();
LL +     bar::<Item: 'a>();
   |

error: aborting due to 1 previous error

